--- a/index.html
+++ b/index.html
@@ -10,10 +10,54 @@
             <div class="moon"></div>
             <div class="houseContainer">
                 <div class="house house1">
-                    
+                    <div class="windowContainer">
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                    </div>
                 </div>
-                <div class="house house2"></div>
-                <div class="house house3"></div>
+                <div class="house house2">
+                    <div class="windowContainer">
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                    </div></div>
+                <div class="house house3">
+                    <div class="windowContainer">
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                        <div class="window">
+                            <img src="images/img1.png">
+                        </div>
+                    </div></div>
             </div>
         </div>
     </body>
