--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
                 <div class="house house1">
                     <div class="windowContainer">
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/1.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/2.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/3.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/4.jpg">
                         </div>
                     </div>
                 </div>
                 <div class="house house2">
                     <div class="windowContainer">
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/5.jpg">
                         </div>
                     </div></div>
                 <div class="house house3">
                     <div class="windowContainer">
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/6.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/7.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/8.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/9.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/10.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/11.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/12.jpg">
                         </div>
                         <div class="window">
-                            <img src="images/img1.png">
+                            <img src="images/13.jpg">
                         </div>
                     </div></div>
             </div>
