Clouds, interhouse, stores

--- a/index.html
+++ b/index.html
@@ -8,85 +8,77 @@
     </head>
     <body>
         <svg style="display: none">
-            <symbol id="cloud">
+            <symbol id="cloud" viewBox="0 0 762 331">
                 <path d="M715.394,228h-16.595c0.79-5.219,1.201-10.562,1.201-16c0-58.542-47.458-106-106-106
             c-8.198,0-16.178,0.932-23.841,2.693C548.279,45.434,488.199,0,417.5,0c-84.827,0-154.374,65.401-160.98,148.529
             C245.15,143.684,232.639,141,219.5,141c-49.667,0-90.381,38.315-94.204,87H46.607C20.866,228,0,251.058,0,279.5
             S20.866,331,46.607,331h668.787C741.133,331,762,307.942,762,279.5S741.133,228,715.394,228z"/>
             </symbol>
-            </svg>
+        </svg>
         <div class="wrapper">
             <div class="moon"></div>
 
-            <svg width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud big front">
-                <use xlink:href="#cloud"></use>
-            </svg>
-            <svg width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud distant smaller">
-                <use xlink:href="#cloud"></use>
-            </svg>
-
-            <svg width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud small">
-                <use xlink:href="#cloud"></use>
-            </svg>
-
-            <svg width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud distant massive">
-                <use xlink:href="#cloud"></use>
-            </svg>
-
-            <svg width="762px" height="331px" viewBox="0 0 762 331" enable-background="new 0 0 762 331" xml:space="preserve" class="cloud">
-                <use xlink:href="#cloud"></use>
-            </svg>
+            <svg class="cloud front big"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud distant smaller"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud background small"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud distant massive"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud background"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud front small"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud distant smaller"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud background small"><use xlink:href="#cloud"/></svg>
+            <svg class="cloud front big"><use xlink:href="#cloud"/></svg>
             
             <div class="houseContainer">
                 <div class="house house1">
                     <div class="windowContainer">
-                        <div class="window">
-                            <img src="images/1.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/2.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/3.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/4.jpg">
-                        </div>
+                        <div class="window"><img src="images/1.jpg"></div>
+                        <div class="window"><img src="images/2.jpg"></div>
+                        <div class="window"><img src="images/3.jpg"></div>
+                        <div class="window"><img src="images/4.jpg"></div>
                     </div>
                 </div>
                 <div class="house house2">
                     <div class="windowContainer">
-                        <div class="window">
-                            <img src="images/5.jpg">
-                        </div>
+                        <div class="window"><img src="images/5.jpg"></div>
                     </div>
                 </div>
                 <div class="house house3">
                     <div class="windowContainer">
-                        <div class="window">
-                            <img src="images/6.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/7.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/8.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/9.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/10.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/11.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/12.jpg">
-                        </div>
-                        <div class="window">
-                            <img src="images/13.jpg">
-                        </div>
+                        <div class="window"><img src="images/6.jpg"></div>
+                        <div class="window"><img src="images/7.jpg"></div>
+                        <div class="window"><img src="images/8.jpg"></div>
+                        <div class="window"><img src="images/9.jpg"></div>
+                        <div class="window"><img src="images/10.jpg"></div>
+                        <div class="window"><img src="images/11.jpg"></div>
+                        <div class="window"><img src="images/12.jpg"></div>
+                        <div class="window"><img src="images/13.jpg"></div>
+                    </div>
+                </div>
+                <div class="house house4">
+                    <div class="windowContainer">
+                        <div class="window"><img src="images/14.jpg"></div>
+                        <div class="window"><img src="images/15.jpg"></div>
+                        <div class="window"><img src="images/16.jpg"></div>
+                        <div class="window"><img src="images/17.jpg"></div>
+                        <div class="window"><img src="images/18.jpg"></div>
+                        <div class="window"><img src="images/19.jpg"></div>
+                    </div>
+                </div>
+                <div class="house interHouse"></div>
+                <div class="house house1">
+                    <div class="windowContainer">
+                        <div class="window"><img src="images/20.jpg"></div>
+                    </div>
+                </div>
+                <div class="house house3">
+                    <div class="windowContainer">
+                        <div class="window"><img src="images/21.jpg"></div>
+                        <div class="window"><img src="images/22.jpg"></div>
+                        <div class="window"><img src="images/23.jpg"></div>
+                        <div class="window"><img src="images/24.jpg"></div>
+                        <div class="window"><img src="images/25.jpg"></div>
+                        <div class="window"><img src="images/26.jpg"></div>
+                        <div class="window"><img src="images/27.jpg"></div>
                     </div>
                 </div>
             </div>
