--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </symbol>
         </svg>
         <div class="wrapper">
+            <img src="images/background.png" class="nightBackground"/>
             <div class="moon"></div>
 
             <svg class="cloud front big"><use xlink:href="#cloud"/></svg>
