--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             </symbol>
         </svg>
         <div class="wrapper">
-            <img src="images/background.png" class="nightBackground"/>
+            <div class="backgroundWrapper">
+                <img src="images/background.png" class="nightBackground"/>
+            </div>
             <div class="moon"></div>
 
             <svg class="cloud front big"><use xlink:href="#cloud"/></svg>
@@ -31,56 +33,63 @@
             
             <div class="houseContainer">
                 <div class="house house1">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/1.jpg"></div>
-                        <div class="window"><img src="images/2.jpg"></div>
-                        <div class="window"><img src="images/3.jpg"></div>
-                        <div class="window"><img src="images/4.jpg"></div>
-                    </div>
+                    <div class="roof"></div>
+                    <div class="window"><img src="images/1.jpg"></div>
                 </div>
                 <div class="house house2">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/5.jpg"></div>
-                    </div>
+                    <div class="window"><img src="images/2.jpg"></div>
                 </div>
                 <div class="house house3">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/6.jpg"></div>
-                        <div class="window"><img src="images/7.jpg"></div>
-                        <div class="window"><img src="images/8.jpg"></div>
-                        <div class="window"><img src="images/9.jpg"></div>
-                        <div class="window"><img src="images/10.jpg"></div>
-                        <div class="window"><img src="images/11.jpg"></div>
-                        <div class="window"><img src="images/12.jpg"></div>
-                        <div class="window"><img src="images/13.jpg"></div>
-                    </div>
+                    <div class="window"><img src="images/3.jpg"></div>
+                    <div class="window window4"><img src="images/4.jpg"></div>
                 </div>
                 <div class="house house4">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/14.jpg"></div>
-                        <div class="window"><img src="images/15.jpg"></div>
-                        <div class="window"><img src="images/16.jpg"></div>
-                        <div class="window"><img src="images/17.jpg"></div>
-                        <div class="window"><img src="images/18.jpg"></div>
-                        <div class="window"><img src="images/19.jpg"></div>
-                    </div>
+                    <div class="window"><img src="images/5.jpg"></div>
+                    <div class="window"><img src="images/6.jpg"></div>
                 </div>
-                <div class="house interHouse"></div>
-                <div class="house house1">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/20.jpg"></div>
-                    </div>
+                <div class="house house5">
+                    <div class="window"><img src="images/7.jpg"></div>
                 </div>
-                <div class="house house3">
-                    <div class="windowContainer">
-                        <div class="window"><img src="images/21.jpg"></div>
-                        <div class="window"><img src="images/22.jpg"></div>
-                        <div class="window"><img src="images/23.jpg"></div>
-                        <div class="window"><img src="images/24.jpg"></div>
-                        <div class="window"><img src="images/25.jpg"></div>
-                        <div class="window"><img src="images/26.jpg"></div>
-                        <div class="window"><img src="images/27.jpg"></div>
-                    </div>
+                <div class="house house6">
+                    <div class="window"><img src="images/8.jpg"></div>
+                </div>
+                <div class="house house7">
+                    <div class="window"><img src="images/9.jpg"></div>
+                    <div class="window"><img src="images/10.jpg"></div>
+                </div>
+                <div class="house house8">
+                    <div class="window"><img src="images/11.jpg"></div>
+                </div>
+                <div class="house house9">
+                    <div class="window"><img src="images/12.jpg"></div>
+                    <div class="window"><img src="images/13.jpg"></div>
+                </div>
+                <div class="house house10">
+                    <div class="window"><img src="images/14.jpg"></div>
+                    <div class="window"><img src="images/15.jpg"></div>
+                    <div class="window"><img src="images/16.jpg"></div>
+                </div>
+                <div class="house house11">
+                    <div class="window"><img src="images/17.jpg"></div>
+                    <div class="window"><img src="images/18.jpg"></div>
+                </div>
+                <div class="house house12">
+                    <div class="window"><img src="images/19.jpg"></div>
+                </div>
+                <div class="house house13">
+                    <div class="window"><img src="images/20.jpg"></div>
+                    <div class="window"><img src="images/21.jpg"></div>
+                    <div class="window"><img src="images/22.jpg"></div>
+                </div>
+                <div class="house house14">
+                    <div class="window"><img src="images/23.jpg"></div>
+                </div>
+                <div class="house house15">
+                    <div class="roof"></div>
+                    <div class="window"><img src="images/24.jpg"></div>
+                    <!-- <div class="window"><img src="images/25.jpg"></div>
+                    <div class="window"><img src="images/26.jpg"></div>
+                    <div class="window"><img src="images/27.jpg"></div> -->
                 </div>
             </div>
         </div>
