--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Windows in the night</title>
+        <meta name="Description" CONTENT="© 2017 Morgane Quéré">
         <link href="main.css" rel="stylesheet" type="text/css">
         <link href="clouds.css" rel="stylesheet" type="text/css">
     </head>
