--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Windows in the night</title>
-        <meta name="Description" CONTENT="© 2017 Morgane Quéré">
+        <title>INSPICIO by Morgane Quéré</title>
+        <meta name="Description" CONTENT="Photos and Design © 2017 Morgane Quéré - Website by github.com/XavCamp">
         <link href="main.css" rel="stylesheet" type="text/css">
         <link href="clouds.css" rel="stylesheet" type="text/css">
     </head>
