--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <meta name="Description" CONTENT="Photos and Design © 2017 Morgane Quéré - Website by github.com/XavCamp">
         <link href="main.css" rel="stylesheet" type="text/css">
         <link href="clouds.css" rel="stylesheet" type="text/css">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69115396-3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments)};
+            gtag('js', new Date());
+            gtag('config', 'UA-69115396-3');
+        </script>
     </head>
     <body>
         <svg style="display: none">
