--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <meta name="Description" CONTENT="Photos and Design © 2017 Morgane Quéré - Website by github.com/XavCamp">
         <link href="main.css" rel="stylesheet" type="text/css">
         <link href="clouds.css" rel="stylesheet" type="text/css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+        <script>
+                $(function(){
+                    $(".wrapper").mousewheel(function(event, delta) {
+                        this.scrollLeft -= delta * 5;
+                        event.preventDefault();
+                    });
+                });
+            </script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69115396-3"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
